--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"start": "nodemon server.js -e pug,mjs,json,js",
 		"watch:js": "parcel watch ./public/assets/js/index.js --out-dir ./public/assets/js --out-file bundle.js",
-		"build:js": "parcel build ./public/assets/js/index.js --out-dir ./public/assets/js --out-file bundle.js"
+		"build:js": "parcel build ./public/assets/js/index.js --out-dir ./public/assets/js --out-file bundle.js",
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
 	},
 	"repository": {
 		"type": "git",
